--- a/public/css/style.css
+++ b/public/css/style.css
@@ -277,6 +277,32 @@ input[type="password"] {
 }
 
 
+/* single land page */
+
+.landMainInfo {
+    background-color:#f9f9f9;
+    margin-top:50px;
+    margin-bottom:50px;
+    padding:30px;
+    text-align:center;
+    border:1px solid #f9f9f9;
+    border-radius: 10px;
+}
+
+.landTitle {
+
+}
+
+.landImg {
+    margin-top:10px;
+    margin-bottom:20px;
+}
+
+.landInfo {
+
+}
+
+
 /* footer */
 .col-lg-12.footer {
     background-color:#033656;
